src/test/ui/unreachable/unreachable-in-call.stderr
error: unreachable expression
  --> $DIR/unreachable-in-call.rs:14:10
   |
LL |          get_u8());
   |          ^^^^^^^^
   |
note: lint level defined here
  --> $DIR/unreachable-in-call.rs:2:9
   |
LL | #![deny(unreachable_code)]
   |         ^^^^^^^^^^^^^^^^
note: any code following this expression is unreachable
  --> $DIR/unreachable-in-call.rs:13:10
   |
LL |     call(diverge(),
   |          ^^^^^^^^^

error: unreachable call
  --> $DIR/unreachable-in-call.rs:17:5
   |
LL |     call(
   |     ^^^^
   |
note: any code following this expression is unreachable
  --> $DIR/unreachable-in-call.rs:19:9
   |
LL |         diverge());
   |         ^^^^^^^^^

error: aborting due to 2 previous errors

